--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Popup de descuento -->
   <div id="discount-popup">
-    💸 50% En la compre de tu 2do AirPod ! ¡OFERTA VALIDA TODO EL MES DE ABRIL 👀
+    💸 50% En la compra de tu 2do AirPod ! ¡OFERTA VALIDA TODO EL MES DE ABRIL 👀
     <button onclick="closeDiscountPopup()">×</button>
   </div>
 
